<resources>
    <string name="app_name">CODVID19 Realtime</string>
    <string name="title_home">Home</string>
    <string name="title_countries">Countries</string>
    <string name="title_search">Search</string>
    <string name="world">World</string>
    <string name="actual_cases">Actual cases</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_deaths">Today deaths</string>
    <string name="cases_1m">Cases / 1M</string>
    <string name="deaths_1m">Deaths / 1M</string>
    <string name="total_cases">Total cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="countries">Countries</string>
    <string name="warningEmptyCountry">Put a country</string>
    <string name="connectInternet">Please connect internet on your phone</string>
    <string name="no_connection">No connection</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="search_country">Search country...</string>
    <string name="country_not_found">Country not found</string>
</resources>
