<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="30dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:textSize="24sp"
            android:text="@string/no_connection"
            tools:ignore="RtlCompat" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/withConnection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/imgWorld"
            android:layout_width="150dp"
            android:layout_height="170dp"
            android:src="@drawable/earth"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/world" />

        <TextView
            android:id="@+id/lblTotalCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_cases"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/imgWorld"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/txtTotalCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/lblTotalCases"/>


        <TextView
            android:id="@+id/lblActualCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/actual_cases"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/txtTotalCases"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/txtActualCases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/lblActualCases"/>

        <TextView
            android:id="@+id/lblRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/txtActualCases"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/txtRecovered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/lblRecovered"/>

        <TextView
            android:id="@+id/lblDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textSize="24sp"
            android:textStyle="italic"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/txtRecovered"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
        <TextView
            android:id="@+id/txtDeaths"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="28sp"
            app:layout_constraintTop_toBottomOf="@id/lblDeaths"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>